--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,13 @@
 name: Generate Snake Animation
 
+# Ajoute ces permissions au niveau du job ou du workflow
+permissions:
+  contents: write  # Indispensable pour push sur une branche
+
 on:
   schedule:
-    # Toutes les 12 heures
-    - cron: "0 */12 * * *"
-  workflow_dispatch:  # Pour lancer manuellement
+    - cron: "0 */12 * * *"  # Toutes les 12 heures
+  workflow_dispatch:        # Pour lancer manuellement
   push:
     branches:
       - main
@@ -18,16 +21,12 @@ jobs:
 
       - name: Generate snake animation
         uses: Platane/snk@v3
-        id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      - name: Show generated files
-        run: git status
 
       - name: Deploy to output branch
         uses: crazy-max/ghaction-github-pages@v4
