--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,12 +2,12 @@ name: Generate Snake Animation
 
 # Ajoute ces permissions au niveau du job ou du workflow
 permissions:
-  contents: write  # Indispensable pour push sur une branche
+  contents: write # Indispensable pour push sur une branche
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Toutes les 12 heures
-  workflow_dispatch:        # Pour lancer manuellement
+    - cron: "0 */12 * * *" # Toutes les 12 heures
+  workflow_dispatch: # Pour lancer manuellement
   push:
     branches:
       - main
@@ -26,6 +26,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg?palette=merko
             dist/github-contribution-grid-snake-dark.svg?palette=merko-dark
+            dist/github-contribution-grid-snake-black.svg?color_snake=%23000000&color_dots=%23333333,%23555555,%23777777,%23999999
             dist/github-contribution-grid-snake-gradient.svg?color_snake=%23228B22&color_dots=%2310b981,%2334d399,%236ee7b7,%23a7f3d0
             dist/github-contribution-grid-snake-ocean.svg?color_snake=%232d7d5e&color_dots=%2310b981,%2334d399,%236ee7b7,%23a7f3d0
             dist/github-contribution-grid-snake-radical.svg?palette=radical
