--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,8 +6,8 @@ permissions:
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # Toutes les 12 heures
-  workflow_dispatch: # Pour lancer manuellement
+    - cron: "0 */12 * * *" # every 12 hours
+  workflow_dispatch: # to manually trigger the workflow
   push:
     branches:
       - main
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate snake animation
-        uses: Platane/snk@v9
+        uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
