--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,7 +23,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_size: 1440x900
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           outputs: |
             dist/github-contribution-grid-snake.svg?palette=merko
             dist/github-contribution-grid-snake-dark.svg?palette=merko-dark
