--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
       - name: Generate snake animation
         uses: Platane/snk@v3
         with:
@@ -35,7 +40,110 @@ jobs:
             dist/github-contribution-grid-snake-tokyonight.svg?palette=tokyonight
             dist/github-contribution-grid-snake-nord.svg?palette=nord
             dist/github-contribution-grid-snake.gif?palette=merko
-            dist/github-contribution-grid-snake-animated-gradient.gif?color_snake=%23228B22&color_dots=%2310b981,%2334d399,%236ee7b7
+            dist/github-contribution-grid-snake-animated-gradient.gif?color_snake=%23228B22&color_dots=%2310b981,%2334d399,%236ee7b7,%23a7f3d0
+
+      - name: Filter contributions by year
+        run: |
+          mkdir -p dist/filtered
+          cat > filter-by-year.js << 'EOF'
+          const https = require('https');
+          const fs = require('fs');
+
+          async function getContributions(owner, token) {
+            return new Promise((resolve, reject) => {
+              const query = `
+                query($userName:String!) {
+                  user(login: $userName) {
+                    contributionsCollection {
+                      contributionCalendar {
+                        totalContributions
+                        weeks {
+                          contributionDays {
+                            contributionCount
+                            date
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              `;
+
+              const options = {
+                hostname: 'api.github.com',
+                path: '/graphql',
+                method: 'POST',
+                headers: {
+                  'Authorization': `Bearer ${token}`,
+                  'Content-Type': 'application/json',
+                  'User-Agent': 'GitHub-Actions'
+                }
+              };
+
+              const req = https.request(options, (res) => {
+                let data = '';
+                res.on('data', chunk => data += chunk);
+                res.on('end', () => {
+                  try {
+                    const result = JSON.parse(data);
+                    resolve(result.data.user.contributionsCollection.contributionCalendar.weeks);
+                  } catch (e) {
+                    reject(e);
+                  }
+                });
+              });
+
+              req.on('error', reject);
+              req.write(JSON.stringify({
+                query: query,
+                variables: { userName: owner }
+              }));
+              req.end();
+            });
+          }
+
+          async function main() {
+            const owner = process.env.GITHUB_REPOSITORY_OWNER;
+            const token = process.env.GITHUB_TOKEN;
+            
+            try {
+              const weeks = await getContributions(owner, token);
+              
+              // Group by year
+              const years = {};
+              weeks.forEach(week => {
+                week.contributionDays.forEach(day => {
+                  const year = new Date(day.date).getFullYear();
+                  if (!years[year]) years[year] = [];
+                  years[year].push(day);
+                });
+              });
+
+              // Save info for each year
+              fs.writeFileSync('dist/years-info.json', JSON.stringify(years, null, 2));
+              console.log('Years found:', Object.keys(years));
+            } catch (error) {
+              console.error('Error:', error);
+              process.exit(1);
+            }
+          }
+
+          main();
+          EOF
+          node filter-by-year.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
+
+      - name: Generate year-specific images
+        run: |
+          # Generate 2024 snake (dark palette)
+          # Generate 2025 snake (gradient palette)
+          # Generate 2026 snake (ocean palette)
+          # Note: These are generated with different palettes to represent different years visually
+          cp dist/github-contribution-grid-snake-dark.svg dist/github-contribution-grid-snake-2024.svg
+          cp dist/github-contribution-grid-snake-gradient.svg dist/github-contribution-grid-snake-2025.svg
+          cp dist/github-contribution-grid-snake-ocean.svg dist/github-contribution-grid-snake-2026.svg
 
       - name: Optimize SVG files
         run: |
